--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -64,17 +64,17 @@
     <Compile Include="FLoading.Designer.cs">
       <DependentUpon>FLoading.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrmMainForm.cs">
+    <Compile Include="frmLogin.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FrmMainForm.Designer.cs">
-      <DependentUpon>FrmMainForm.cs</DependentUpon>
+    <Compile Include="frmLogin.Designer.cs">
+      <DependentUpon>frmLogin.cs</DependentUpon>
     </Compile>
-    <Compile Include="LoginForm.cs">
+    <Compile Include="frmMain.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="LoginForm.Designer.cs">
-      <DependentUpon>LoginForm.cs</DependentUpon>
+    <Compile Include="frmMain.Designer.cs">
+      <DependentUpon>frmMain.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -171,11 +171,11 @@
     <EmbeddedResource Include="FLoading.resx">
       <DependentUpon>FLoading.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FrmMainForm.resx">
-      <DependentUpon>FrmMainForm.cs</DependentUpon>
+    <EmbeddedResource Include="frmLogin.resx">
+      <DependentUpon>frmLogin.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="LoginForm.resx">
-      <DependentUpon>LoginForm.cs</DependentUpon>
+    <EmbeddedResource Include="frmMain.resx">
+      <DependentUpon>frmMain.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
