--- a/GUI/App.config
+++ b/GUI/App.config
@@ -18,4 +18,9 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
   </startup>
+  <connectionStrings>
+    <add name="CM_Cinema_DB"
+         connectionString="Data Source=.;Initial Catalog=CM_Cinema_DB;User ID=sa;Password=sa;Encrypt=False"
+         providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
