--- a/DTO/DTO.csproj
+++ b/DTO/DTO.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common\CCommon.cs" />
+    <Compile Include="Custom\CConfig.cs" />
     <Compile Include="Custom\EEnum.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utility\CUtility.cs" />
