--- a/.gitignore
+++ b/.gitignore
@@ -545,3 +545,4 @@ FodyWeavers.xsd
 # Additional files built by Visual Studio
 
 # End of https://www.toptal.com/developers/gitignore/api/aspnetcore,visualstudio,visualstudiocode
+/GUI/App.config
