Thêm mới chức năng ngôn ngữ

--- a/BUS/BUS.csproj
+++ b/BUS/BUS.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="Danh_Muc\StaffController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sys\LanguageController.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DAL\DAL.csproj">
@@ -55,8 +56,6 @@
       <Name>DTO</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Sys\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
