--- a/.gitignore
+++ b/.gitignore
@@ -547,3 +547,4 @@ FodyWeavers.xsd
 # End of https://www.toptal.com/developers/gitignore/api/aspnetcore,visualstudio,visualstudiocode
 /.vs/GUI/v17/DocumentLayout.json
 /GUI/App.config
+/GUI/Properties/licenses.licx
