--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -42,11 +42,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BasicMethods.cs" />
     <Compile Include="CM_Cinema_DB.designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>CM_Cinema_DB.dbml</DependentUpon>
     </Compile>
+    <Compile Include="DAL_Seats.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -61,6 +63,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="CM_Cinema_DB.dbml">
       <Generator>MSLinqToSQLGenerator</Generator>
       <LastGenOutput>CM_Cinema_DB.designer.cs</LastGenOutput>
