--- a/DAL/app.config
+++ b/DAL/app.config
@@ -4,7 +4,10 @@
     </configSections>
     <connectionStrings>
         <add name="DAL.Properties.Settings.CM_Cinema_DBConnectionString"
-            connectionString="Data Source=SOKKIMTHANH;Initial Catalog=CM_Cinema_DB;Integrated Security=True;Trust Server Certificate=True"
+            connectionString="Data Source=.;Initial Catalog=CM_Cinema_DB;User ID=sa;Password=sa;Encrypt=False"
+            providerName="System.Data.SqlClient" />
+        <add name="DAL.Properties.Settings.CM_Cinema_DBConnectionString1"
+            connectionString="Data Source=HoshikiShiro\SQLEXPRESS;Initial Catalog=CM_Cinema_DB;Integrated Security=True;TrustServerCertificate=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
