--- a/DTO/DTO.csproj
+++ b/DTO/DTO.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DTO_Seats.cs" />
     <Compile Include="tbl_Report_Revenue_DTO.cs" />
     <Compile Include="tbl_Report_IncomeExpense_DTO.cs" />
     <Compile Include="tbl_Report_Inventory_DTO.cs" />
