--- a/GUI/App.config
+++ b/GUI/App.config
@@ -1,4 +1,4 @@
-﻿﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <configSections>
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System">
@@ -20,7 +20,7 @@
   </startup>
   <connectionStrings>
     <add name="CM_Cinema_DB"
-         connectionString="Data Source=SOKKIMTHANH;Initial Catalog=CM_Cinema_DB;Integrated Security=True;"
+         connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=CM_Cinema_DB;Integrated Security=True;"
          providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
