--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -505,6 +505,12 @@
   <ItemGroup>
     <None Include="Resources\showworktimeonly_16x16.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\boproduct_16x16.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\employee_16x161.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
