cập nhật uc phòng chiếu

--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -511,6 +511,12 @@
   <ItemGroup>
     <None Include="Resources\employee_16x161.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\changetextcase_16x16.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\status_16x16.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
