--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -529,6 +529,18 @@
   <ItemGroup>
     <None Include="Resources\rowindex_16x16.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\video_16x16.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\media_16x161.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\time_16x16.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\time2_16x16.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
