tạo thư mục tbl, cập nhật giá trị cho các class trong class library DTO

--- a/BUS/BUS.csproj
+++ b/BUS/BUS.csproj
@@ -57,6 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Sys\" />
+    <Folder Include="Tbl_BUS\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
