Update 18/10/2024: _ Add tbl_DM_Theater demo to BUS, DAL, DTO _ update database to v1.1

--- a/BUS/BUS.csproj
+++ b/BUS/BUS.csproj
@@ -43,10 +43,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BasicMethods.cs" />
-    <Compile Include="BUS_Seats.cs" />
+    <Compile Include="tbl_DM_Seat_BUS.cs" />
     <Compile Include="Danh_Muc\StaffController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sys\LanguageController.cs" />
+    <Compile Include="tbl_DM_Theater_BUS.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DAL\DAL.csproj">
