--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -48,13 +48,14 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>CM_Cinema_DB.dbml</DependentUpon>
     </Compile>
-    <Compile Include="DAL_Seats.cs" />
+    <Compile Include="tbl_DM_Seat_DAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="tbl_DM_Theater_DAL.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DTO\DTO.csproj">
