--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -89,9 +89,6 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UI\Modules\ucBase.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
     <Compile Include="UI\Modules\ucBaoCaoDoanhThu.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -109,6 +106,12 @@
     </Compile>
     <Compile Include="UI\Modules\ucBaoCaoTonKho.Designer.cs">
       <DependentUpon>ucBaoCaoTonKho.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Modules\ucBase.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UI\Modules\ucCaLamViec.cs">
+      <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="UI\Modules\ucCaLamViec.cs">
       <SubType>UserControl</SubType>
