--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -43,6 +43,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BasicMethods.cs" />
+    <Compile Include="CM_Cinema_DB.cs">
+      <DependentUpon>CM_Cinema_DB.dbml</DependentUpon>
+    </Compile>
     <Compile Include="CM_Cinema_DB.designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
