--- a/BUS/BUS.csproj
+++ b/BUS/BUS.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Danh_Muc\StaffController.cs" />
+    <Compile Include="Danh_Muc\tbl_DM_AgeRating_BUS.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -57,7 +58,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Sys\" />
-    <Folder Include="Tbl_BUS\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
