Sửa lỗi merge code có chức năng đánh giá độ tuổi

--- a/GUI/App.config
+++ b/GUI/App.config
@@ -20,7 +20,7 @@
   </startup>
   <connectionStrings>
     <add name="CM_Cinema_DB"
-         connectionString="Data Source=.;Initial Catalog=CM_Cinema_DB;Integrated Security=True;"
+         connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=CM_Cinema_DB;Integrated Security=True;"
          providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
