--- a/BUS/BUS.csproj
+++ b/BUS/BUS.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="BasicMethods.cs" />
     <Compile Include="Sys\Ultilities.cs" />
+    <Compile Include="tbl_DM_Movie_BUS.cs" />
     <Compile Include="tbl_DM_Seat_BUS.cs" />
     <Compile Include="Danh_Muc\StaffController.cs" />
     <Compile Include="Danh_Muc\tbl_DM_AgeRating_BUS.cs" />
