--- a/GUI/App.config
+++ b/GUI/App.config
@@ -19,8 +19,11 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
   </startup>
   <connectionStrings>
-    <add name="CM_Cinema_DB"
+    <!--<add name="CM_Cinema_DB"
          connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=CM_Cinema_DB;Integrated Security=True;"
+         providerName="System.Data.SqlClient" />-->
+    <add name="CM_Cinema_DB"
+         connectionString="Data Source=.;Initial Catalog=CM_Cinema_DB;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
          providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
