--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -52,6 +52,7 @@
       <DependentUpon>CM_Cinema_DB.dbml</DependentUpon>
     </Compile>
     <Compile Include="tbl_DM_Movie_DAL.cs" />
+    <Compile Include="tbl_DM_Product_DAL.cs" />
     <Compile Include="tbl_DM_Seat_DAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
