--- a/BUS/BUS.csproj
+++ b/BUS/BUS.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BasicMethods.cs" />
+    <Compile Include="Danh_Muc\tbl_DM_Staff_BUS.cs" />
     <Compile Include="Sys\Ultilities.cs" />
     <Compile Include="tbl_DM_Movie_BUS.cs" />
     <Compile Include="tbl_DM_Seat_BUS.cs" />
