--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -60,6 +60,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
     <Compile Include="tbl_DM_AgeRating_DAL.cs" />
+    <Compile Include="tbl_DM_Staff_DAL.cs" />
     <Compile Include="tbl_DM_Theater_DAL.cs" />
   </ItemGroup>
   <ItemGroup>
