--- a/DTO/DTO.csproj
+++ b/DTO/DTO.csproj
@@ -41,8 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="tbl_DTO\tbl_Report_Revenue_DTO.cs" />
-    <Compile Include="tbl_DTO\tbl_Report_IncomeExpense_DTO.cs" />
+    <Compile Include="tbl_DTO\tbl_Report_Sales_DTO.cs" />
+    <Compile Include="tbl_DTO\tbl_Report_Expense_DTO.cs" />
     <Compile Include="tbl_DTO\tbl_Report_Inventory_DTO.cs" />
     <Compile Include="tbl_DTO\tbl_DM_Seat_DTO.cs" />
     <Compile Include="tbl_DTO\tbl_DM_Theater_DTO.cs" />
