Cập nhật tbl_Report_Sales_DAL thêm chức năng hiển thị chi tiết, tổng quát cho báo cáo

--- a/DTO/DTO.csproj
+++ b/DTO/DTO.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="tbl_DTO\tbl_Report_Detail_Sales_DTO.cs" />
     <Compile Include="tbl_DTO\tbl_Report_Sales_DTO.cs" />
     <Compile Include="tbl_DTO\tbl_Report_Expense_DTO.cs" />
     <Compile Include="tbl_DTO\tbl_Report_Inventory_DTO.cs" />
