Cập nhật chức năng báo cáo tổng quan

--- a/GUI/App.config
+++ b/GUI/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System">
@@ -19,11 +19,8 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
   </startup>
   <connectionStrings>
-    <!--<add name="CM_Cinema_DB"
-         connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=CM_Cinema_DB;Integrated Security=True;"
-         providerName="System.Data.SqlClient" />-->
-    <add name="CM_Cinema_DB"
-         connectionString="Data Source=.;Initial Catalog=CM_Cinema_DB;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
-         providerName="System.Data.SqlClient" />
+    <add name="CM_Cinema_DB" connectionString="Data Source=.;Initial Catalog=CM_Cinema_DB;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
+      providerName="System.Data.SqlClient" />
+    <add name="sokkimthanh.CM_Cinema_DB.dbo" connectionString="xpoprovider=MSSqlServer;data source=SOKKIMTHANH;initial catalog=CM_Cinema_DB;integrated security=True;encrypt=True;trustservercertificate=True" />
   </connectionStrings>
 </configuration>
