+ update CRUD MovieSchedule progress 5% (Add movieschedule DTO) + update database v1.2

--- a/DAL/app.config
+++ b/DAL/app.config
@@ -9,5 +9,8 @@
         <add name="DAL.Properties.Settings.CM_Cinema_DBConnectionString1"
             connectionString="Data Source=SOKKIMTHANH;Initial Catalog=CM_Cinema_DB;Integrated Security=True;TrustServerCertificate=True"
             providerName="System.Data.SqlClient" />
+        <add name="DAL.Properties.Settings.CM_Cinema_DBConnectionString2"
+            connectionString="Data Source=HOSHIKISHIRO\SQLEXPRESS;Initial Catalog=CM_Cinema_DB;Integrated Security=True;TrustServerCertificate=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
