--- a/DAL/Properties/Settings.settings
+++ b/DAL/Properties/Settings.settings
@@ -13,10 +13,18 @@
     <Setting Name="CM_Cinema_DBConnectionString1" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"&gt;
-  &lt;ConnectionString&gt;Data Source=HoshikiShiro\SQLEXPRESS;Initial Catalog=CM_Cinema_DB;Integrated Security=True;TrustServerCertificate=True&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Data Source=SOKKIMTHANH;Initial Catalog=CM_Cinema_DB;Integrated Security=True;TrustServerCertificate=True&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=HoshikiShiro\SQLEXPRESS;Initial Catalog=CM_Cinema_DB;Integrated Security=True;TrustServerCertificate=True</Value>
+      <Value Profile="(Default)">Data Source=SOKKIMTHANH;Initial Catalog=CM_Cinema_DB;Integrated Security=True;TrustServerCertificate=True</Value>
+    </Setting>
+    <Setting Name="CM_Cinema_DBConnectionString2" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"&gt;
+  &lt;ConnectionString&gt;Data Source=HOSHIKISHIRO\SQLEXPRESS;Initial Catalog=CM_Cinema_DB;Integrated Security=True;TrustServerCertificate=True&lt;/ConnectionString&gt;
+  &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">Data Source=HOSHIKISHIRO\SQLEXPRESS;Initial Catalog=CM_Cinema_DB;Integrated Security=True;TrustServerCertificate=True</Value>
     </Setting>
   </Settings>
 </SettingsFile>
