--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -51,6 +51,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>CM_Cinema_DB.dbml</DependentUpon>
     </Compile>
+    <Compile Include="tbl_DM_MovieSchedule_DAL.cs" />
     <Compile Include="tbl_DM_Movie_DAL.cs" />
     <Compile Include="tbl_DM_Product_DAL.cs" />
     <Compile Include="tbl_DM_Seat_DAL.cs" />
