--- a/DTO/DTO.csproj
+++ b/DTO/DTO.csproj
@@ -42,7 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="tbl_DTO\tbl_DM_Shift_DTO.cs" />
-    <Compile Include="tbl_DTO\tbl_DM_MovieSchedule.cs" />
+    <Compile Include="tbl_DTO\tbl_DM_MovieSchedule_DTO.cs" />
     <Compile Include="tbl_DTO\tbl_DM_Staff_DTO.cs" />
     <Compile Include="tbl_DTO\tbl_Report_Revenue_DTO.cs" />
     <Compile Include="tbl_DTO\tbl_Report_IncomeExpense_DTO.cs" />
