--- a/DAL/app.config
+++ b/DAL/app.config
@@ -10,10 +10,16 @@
             connectionString="Data Source=SOKKIMTHANH;Initial Catalog=CM_Cinema_DB;Integrated Security=True;TrustServerCertificate=True"
             providerName="System.Data.SqlClient" />
         <add name="DAL.Properties.Settings.CM_Cinema_DBConnectionString2"
-            connectionString="Data Source=DESKTOP-SV40LIF;Initial Catalog=CM_Cinema_DB;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
+            connectionString="Data Source=DESKTOP-SV40LIF;Initial Catalog=CM_Cinema_DB;Integrated Security=True;Encrypt=True;TrustServerCertificate=True"
             providerName="System.Data.SqlClient" />
         <add name="DAL.Properties.Settings.CM_Cinema_DBConnectionString3"
             connectionString="Data Source=DESKTOP-SV40LIF;Initial Catalog=CM_Cinema_DB;Integrated Security=True;Encrypt=True;TrustServerCertificate=True"
+            providerName="System.Data.SqlClient" />
+        <add name="DAL.Properties.Settings.CM_Cinema_DBConnectionString4"
+            connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=CM_Cinema_DB;Integrated Security=True;TrustServerCertificate=True"
+            providerName="System.Data.SqlClient" />
+        <add name="DAL.Properties.Settings.CM_Cinema_DBConnectionString5"
+            connectionString="Data Source=HOSHIKISHIRO\SQLEXPRESS;Initial Catalog=CM_Cinema_DB;Integrated Security=True;TrustServerCertificate=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
