--- a/DAL/app.config
+++ b/DAL/app.config
@@ -15,5 +15,8 @@
         <add name="DAL.Properties.Settings.CM_Cinema_DBConnectionString3"
             connectionString="Data Source=DESKTOP-SV40LIF;Initial Catalog=CM_Cinema_DB;Integrated Security=True;Encrypt=True;TrustServerCertificate=True"
             providerName="System.Data.SqlClient" />
+        <add name="DAL.Properties.Settings.CM_Cinema_DBConnectionString4"
+            connectionString="Data Source=SOKKIMTHANH;Initial Catalog=CM_Cinema_DB;Integrated Security=True;Encrypt=True;TrustServerCertificate=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
