--- a/BUS/BUS.csproj
+++ b/BUS/BUS.csproj
@@ -55,5 +55,15 @@
     <Compile Include="Sys\LanguageController.cs" />
     <Compile Include="tbl_DM_Theater_BUS.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DAL\DAL.csproj">
+      <Project>{ef952f61-3059-40e4-9b9a-5d1017d34101}</Project>
+      <Name>DAL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DTO\DTO.csproj">
+      <Project>{2458331a-da31-4263-98c0-8f78f67d1090}</Project>
+      <Name>DTO</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
