Hiển thị chuỗi kết nối

--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -636,6 +636,18 @@
   <ItemGroup>
     <None Include="Resources\radio_16x16.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\iconsetsymbols3_16x16.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\iconsetsymbols3_32x32.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\play_16x161.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\play_32x321.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
