--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -98,11 +98,11 @@
     <Compile Include="frmLogin.Designer.cs">
       <DependentUpon>frmLogin.cs</DependentUpon>
     </Compile>
-    <Compile Include="NhapChuoiKetNoiBaoCao.cs">
+    <Compile Include="frmConnection.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="NhapChuoiKetNoiBaoCao.Designer.cs">
-      <DependentUpon>NhapChuoiKetNoiBaoCao.cs</DependentUpon>
+    <Compile Include="frmConnection.Designer.cs">
+      <DependentUpon>frmConnection.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -214,8 +214,8 @@
     <EmbeddedResource Include="frmLogin.resx">
       <DependentUpon>frmLogin.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="NhapChuoiKetNoiBaoCao.resx">
-      <DependentUpon>NhapChuoiKetNoiBaoCao.cs</DependentUpon>
+    <EmbeddedResource Include="frmConnection.resx">
+      <DependentUpon>frmConnection.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
