--- a/BUS/BUS.csproj
+++ b/BUS/BUS.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Bao_Cao\tbl_Report_BUS.cs" />
     <Compile Include="BasicMethods.cs" />
     <Compile Include="Danh_Muc\tbl_DM_Shift_BUS.cs" />
+    <Compile Include="Danh_Muc\tbl_DM_StaffSchedule_BUS.cs" />
     <Compile Include="Danh_Muc\tbl_DM_Staff_BUS.cs" />
     <Compile Include="Danh_Muc\tbl_DM_Product_BUS.cs" />
     <Compile Include="Sys\Ultilities.cs" />
