--- a/GUI/App.config
+++ b/GUI/App.config
@@ -19,7 +19,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
   </startup>
   <connectionStrings>
-    <add name="CM_Cinema_DB" connectionString="Data Source=.;Initial Catalog=CM_Cinema_DB;Integrated Security=True;Encrypt=False;trustservercertificate=True"
+    <add name="CM_Cinema_DB" connectionString="Data Source=.\sqlexpress;Initial Catalog=CM_Cinema_DB;Integrated Security=True;Encrypt=False;trustservercertificate=True"
       providerName="System.Data.SqlClient" />
     <add name="sokkimthanh.CM_Cinema_DB.dbo" connectionString="xpoprovider=MSSqlServer;data source=SOKKIMTHANH;initial catalog=CM_Cinema_DB;integrated security=True;encrypt=True;trustservercertificate=True" />
     <add name="localhost_CM_Cinema_DB_Connection" connectionString="XpoProvider=MSSqlServer;data source=SOKKIMTHANH;integrated security=SSPI;initial catalog=CM_Cinema_DB" />
