--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -193,6 +193,12 @@
     <Compile Include="UI\Modules\ucDanhGiaDoTuoi.Designer.cs">
       <DependentUpon>ucDanhGiaDoTuoi.cs</DependentUpon>
     </Compile>
+    <Compile Include="UI\ReportDesign\RP_Expense.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="UI\ReportDesign\RP_Expense.Designer.cs">
+      <DependentUpon>RP_Expense.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\ReportDesign\RP_Sales.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -269,6 +275,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UI\Modules\ucSuatChieu.resx">
       <DependentUpon>ucSuatChieu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\ReportDesign\RP_Expense.resx">
+      <DependentUpon>RP_Expense.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\ReportDesign\RP_Sales.resx">
       <DependentUpon>RP_Sales.cs</DependentUpon>
