--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -91,7 +91,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="tbl_sp\" />
+    <Folder Include="tbl_DAL\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DTO\DTO.csproj">
