--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -54,6 +54,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>CM_Cinema_DB.dbml</DependentUpon>
     </Compile>
+    <Compile Include="tbl_DAL\InventorySettings.cs" />
     <Compile Include="tbl_DM_MovieSchedule_DAL.cs" />
     <Compile Include="tbl_DM_Movie_DAL.cs" />
     <Compile Include="tbl_DM_Product_DAL.cs" />
@@ -93,9 +94,7 @@
       <DependentUpon>CM_Cinema_DB.dbml</DependentUpon>
     </None>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="tbl_DAL\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\DTO\DTO.csproj">
       <Project>{2458331a-da31-4263-98c0-8f78f67d1090}</Project>
