--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -106,6 +106,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UI\Component\ComboBoxItem.cs" />
     <Compile Include="UI\Modules\ucBaoCaoDoanhThu.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -199,12 +200,6 @@
     <Compile Include="UI\ReportDesign\RP_Expense.Designer.cs">
       <DependentUpon>RP_Expense.cs</DependentUpon>
     </Compile>
-    <Compile Include="UI\ReportDesign\RP_Inventory.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="UI\ReportDesign\RP_Inventory.Designer.cs">
-      <DependentUpon>RP_Inventory.cs</DependentUpon>
-    </Compile>
     <Compile Include="UI\ReportDesign\RP_InventoryDetail.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -290,9 +285,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UI\ReportDesign\RP_Expense.resx">
       <DependentUpon>RP_Expense.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="UI\ReportDesign\RP_Inventory.resx">
-      <DependentUpon>RP_Inventory.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\ReportDesign\RP_InventoryDetail.resx">
       <DependentUpon>RP_InventoryDetail.cs</DependentUpon>
