Cập nhật thông tin chi tiết phòng chiếu

--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -694,6 +694,12 @@
   <ItemGroup>
     <None Include="Resources\play_32x321.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\apply_16x163.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\info_16x16.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
