--- a/DAL/app.config
+++ b/DAL/app.config
@@ -18,5 +18,8 @@
         <add name="DAL.Properties.Settings.CM_Cinema_DBConnectionString4"
             connectionString="Data Source=SOKKIMTHANH;Initial Catalog=CM_Cinema_DB;Integrated Security=True;Encrypt=True;TrustServerCertificate=True"
             providerName="System.Data.SqlClient" />
+        <add name="DAL.Properties.Settings.CM_Cinema_DBConnectionString5"
+            connectionString="Data Source=HoshikiShiro\SQLEXPRESS;Initial Catalog=CM_Cinema_DB;Integrated Security=True;Encrypt=False"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
