--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -703,6 +703,12 @@
   <ItemGroup>
     <None Include="Resources\currency_16x16.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\refreshpivottable_16x161.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\refreshpivottable_32x321.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
