--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -709,6 +709,15 @@
   <ItemGroup>
     <None Include="Resources\refreshpivottable_32x321.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\apply_16x164.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\apply_16x165.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\apply_16x166.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
