updates add pick movie function and pick seats function

--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -69,6 +69,7 @@
     <Compile Include="tbl_DM_StaffSchedule_DAL.cs" />
     <Compile Include="tbl_DM_Staff_DAL.cs" />
     <Compile Include="tbl_DM_Theater_DAL.cs" />
+    <Compile Include="tbl_DM_Ticket_DAL.cs" />
     <Compile Include="tbl_Report_Expense_DAL.cs" />
     <Compile Include="tbl_Report_Inventory_DAL.cs" />
     <Compile Include="tbl_Report_Sales_DAL.cs" />
