--- a/BUS/BUS.csproj
+++ b/BUS/BUS.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Danh_Muc\tbl_DM_StaffSchedule_BUS.cs" />
     <Compile Include="Danh_Muc\tbl_DM_Staff_BUS.cs" />
     <Compile Include="Danh_Muc\tbl_DM_Product_BUS.cs" />
+    <Compile Include="Danh_Muc\tbl_DM_Ticket_BUS.cs" />
     <Compile Include="Sys\Ultilities.cs" />
     <Compile Include="Danh_Muc\tbl_DM_Movie_BUS.cs" />
     <Compile Include="Danh_Muc\tbl_DM_MovieSchedule_BUS.cs" />
