--- a/DTO/DTO.csproj
+++ b/DTO/DTO.csproj
@@ -48,6 +48,7 @@
     <Compile Include="tbl_DTO\tbl_DM_MovieSchedule_DTO.cs" />
     <Compile Include="tbl_DTO\tbl_DM_StaffSchedule_DTO.cs" />
     <Compile Include="tbl_DTO\tbl_DM_Staff_DTO.cs" />
+    <Compile Include="tbl_DTO\tbl_DM_Ticket_DTO.cs" />
     <Compile Include="tbl_DTO\tbl_Report_Detail_Sales_DTO.cs" />
     <Compile Include="tbl_DTO\tbl_Report_Sales_DTO.cs" />
     <Compile Include="tbl_DTO\tbl_Report_Expense_DTO.cs" />
