Thêm mới chức năng thanh toán

--- a/BUS/BUS.csproj
+++ b/BUS/BUS.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="Bao_Cao\tbl_Report_BUS.cs" />
     <Compile Include="BasicMethods.cs" />
+    <Compile Include="Danh_Muc\tbl_DM_Bill_BUS.cs" />
     <Compile Include="Danh_Muc\tbl_DM_Shift_BUS.cs" />
     <Compile Include="Danh_Muc\tbl_DM_StaffSchedule_BUS.cs" />
     <Compile Include="Danh_Muc\tbl_DM_Staff_BUS.cs" />
