--- a/DAL/app.config
+++ b/DAL/app.config
@@ -21,5 +21,8 @@
         <add name="DAL.Properties.Settings.CM_Cinema_DBConnectionString5"
             connectionString="Data Source=HoshikiShiro\SQLEXPRESS;Initial Catalog=CM_Cinema_DB;Integrated Security=True;Encrypt=False"
             providerName="System.Data.SqlClient" />
+        <add name="DAL.Properties.Settings.CM_Cinema_DBConnectionString6"
+            connectionString="Data Source=.;Initial Catalog=CM_Cinema_DB;Integrated Security=True;Encrypt=False"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
