--- a/DTO/DTO.csproj
+++ b/DTO/DTO.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="tbl_DTO\tbl_DM_Bill_DTO.cs" />
     <Compile Include="tbl_DTO\tbl_DM_Shift_DTO.cs" />
     <Compile Include="tbl_DTO\tbl_DM_MovieSchedule_DTO.cs" />
     <Compile Include="tbl_DTO\tbl_DM_StaffSchedule_DTO.cs" />
